<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="1"
        android:title="Search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/logout_icon"
        android:orderInCategory="100"
        android:title="Log out"
        app:showAsAction="never" />
</menu>